--- a/Views/Home/SignIn.cshtml
+++ b/Views/Home/SignIn.cshtml
@@ -35,14 +35,54 @@
                                     <li class="movie-sta-text-1 py-1"><a href="#">PHIM ĐANG CHIẾU</a></li>
                                     <div class="movie-list py-1">
                                         <div class="row">
-                                            
+                                            @if (ViewBag.MovieList != null)
+                                            {
+                                                var count = 0;
+                                                foreach (var movie in ViewBag.MovieList)
+                                                {
+                                                    if (movie.movie_status == true && count < 4)
+                                                    {
+                                                        <div class="col-md-3 sub-movie-list">
+                                                            <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
+                                                                <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                                <button class="buy-ticket-btn btn">
+                                                                    <i class="ti-ticket"></i>
+                                                                    Mua vé
+                                                                </button>
+                                                                <span>@movie.title</span>
+                                                            </a>
+                                                        </div>
+                                                        count++;
+                                                    }
+                                                }
+                                            }
                                         </div>
                                     </div>
 
                                     <li class="movie-sta-text-2 py-1"><a href="#">PHIM SẮP CHIẾU</a></li>
                                     <div class="movie-list py-1">
                                         <div class="row">
-                                            
+                                            @if (ViewBag.MovieList != null)
+                                            {
+                                                var count = 0;
+                                                foreach (var movie in ViewBag.MovieList)
+                                                {
+                                                    if (movie.movie_status == false && count < 4)
+                                                    {
+                                                        <div class="col-md-3 sub-movie-list">
+                                                            <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
+                                                                <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                                <button class="buy-ticket-btn btn">
+                                                                    <i class="ti-ticket"></i>
+                                                                    Mua vé
+                                                                </button>
+                                                                <span>@movie.title</span>
+                                                            </a>
+                                                        </div>
+                                                        count++;
+                                                    }
+                                                }
+                                            }
                                         </div>
                                     </div>
                                 </ul>
@@ -52,8 +92,8 @@
                                 Góc Điện Ảnh
                                 <i class="ti-angle-down down-btn"></i>
                                 <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="#">Thể loại phim</a></li>
-                                    <li><a href="#">Diễn viên</a></li>
+                                    <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
+                                    <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
                                     <li><a href="#">Đạo diễn</a></li>
                                     <li><a href="#">Bình luận phim</a></li>
                                 </ul>
@@ -64,7 +104,7 @@
                                 <i class="ti-angle-down down-btn"></i>
                                 <ul class="sub-list-gr-1 list-group">
                                     <li><a href="#">Ưu đãi</a></li>
-                                    <li><a href="#">Phim hay tháng</a></li>
+                                    <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                                 </ul>
                             </li>
 
@@ -72,9 +112,8 @@
                                 Rạp/Giá vé
                                 <i class="ti-angle-down down-btn"></i>
                                 <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="#">Rạp Đà Nẵng</a></li>
+                                    <li><a href="/User/UserHome/OhayouCinema">Rạp Đà Nẵng</a></li>
                                 </ul>
-
                             </li>
                         </ul>
                     </div>
@@ -101,6 +140,7 @@
                                         <input name="dateofbirth" type="date" required placeholder="Date Of Birth">
                                         <input name="pass" type="password" required placeholder="Password">
                                         <input name="confirmpass" type="password" required placeholder="Confirm Password">
+                                        <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                         <span class="text-danger error-message">
                                             @ViewBag.ErrorEmailExist
                                             @ViewBag.ErrorPassNotsame
@@ -115,6 +155,7 @@
                                         <h1>Đăng Nhập</h1>
                                         <input name="email" type="email" required placeholder="Email">
                                         <input name="pass" type="password" required placeholder="Password">
+                                        <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                         <span class="text-danger error-message">
                                             @ViewBag.ErrorEmail
                                             @ViewBag.ErrorPass
