--- a/Views/Home/SignUp.cshtml
+++ b/Views/Home/SignUp.cshtml
@@ -31,26 +31,65 @@
                                 <li class="movie-sta-text-1 py-1"><a href="#">PHIM ĐANG CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                        
-
+                                        @if (ViewBag.MovieList != null)
+                                        {
+                                            var count = 0;
+                                            foreach (var movie in ViewBag.MovieList)
+                                            {
+                                                if (movie.movie_status == true && count < 4)
+                                                {
+                                                    <div class="col-md-3 sub-movie-list">
+                                                        <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
+                                                            <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                            <button class="buy-ticket-btn btn">
+                                                                <i class="ti-ticket"></i>
+                                                                Mua vé
+                                                            </button>
+                                                            <span>@movie.title</span>
+                                                        </a>
+                                                    </div>
+                                                    count++;
+                                                }
+                                            }
+                                        }
                                     </div>
                                 </div>
 
                                 <li class="movie-sta-text-2 py-1"><a href="#">PHIM SẮP CHIẾU</a></li>
                                 <div class="movie-list py-1">
                                     <div class="row">
-                                       
+                                        @if (ViewBag.MovieList != null)
+                                        {
+                                            var count = 0;
+                                            foreach (var movie in ViewBag.MovieList)
+                                            {
+                                                if (movie.movie_status == false && count < 4)
+                                                {
+                                                    <div class="col-md-3 sub-movie-list">
+                                                        <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
+                                                            <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                            <button class="buy-ticket-btn btn">
+                                                                <i class="ti-ticket"></i>
+                                                                Mua vé
+                                                            </button>
+                                                            <span>@movie.title</span>
+                                                        </a>
+                                                    </div>
+                                                    count++;
+                                                }
+                                            }
+                                        }
                                     </div>
                                 </div>
                             </ul>
                         </li>
-                       
+
                         <li class="list-group-item cinema-corner text-center">
                             Góc Điện Ảnh
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
+                                <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
+                                <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
                                 <li><a href="#">Đạo diễn</a></li>
                                 <li><a href="#">Bình luận phim</a></li>
                             </ul>
@@ -61,7 +100,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="#">Ưu đãi</a></li>
-                                <li><a href="#">Phim hay tháng</a></li>
+                                <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                             </ul>
                         </li>
 
@@ -69,9 +108,8 @@
                             Rạp/Giá vé
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Rạp Đà Nẵng</a></li>
+                                <li><a href="/User/UserHome/OhayouCinema">Rạp Đà Nẵng</a></li>
                             </ul>
-
                         </li>
                     </ul>
                 </div>
@@ -98,6 +136,7 @@
                                     <input name="dateofbirth" type="date" required placeholder="Date Of Birth">
                                     <input name="pass" type="password" required placeholder="Password">
                                     <input name="confirmpass" type="password" required placeholder="Confirm Password">
+                                    <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                     <span class="text-danger error-message">
                                         @ViewBag.ErrorEmailExist
                                         @ViewBag.ErrorPassNotsame
@@ -112,6 +151,7 @@
                                     <h1>Đăng Nhập</h1>
                                     <input name="email" type="email" required placeholder="Email">
                                     <input name="pass" type="password" required placeholder="Password">
+                                    <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                     <span class="text-danger error-message">
                                         @ViewBag.ErrorEmail
                                         @ViewBag.ErrorPass
