--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="~/assets/css/layout.css?v=1">
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -20,9 +21,9 @@
                     </a>
                 </div>
                 <div class="col-md-2 buyticket-area">
-                    <a href="/User/BookTicket/BookTicket" class="buyticket-btn btn">
+                    <button type="button" onclick="redirectToSignIn('/User/BookTicket/BookTicket')" class="buyticket-btn btn">
                         <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
-                    </a>
+                    </button>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-gr-1 list-group list-group-horizontal">
@@ -103,6 +104,7 @@
                                     <input name="dateofbirth" type="date" required placeholder="Date Of Birth">
                                     <input name="pass" type="password" required placeholder="Password">
                                     <input name="confirmpass" type="password" required placeholder="Confirm Password">
+                                    <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                     <span class="text-danger error-message">
                                         @ViewBag.ErrorEmailExist
                                         @ViewBag.ErrorPassNotsame
@@ -117,6 +119,7 @@
                                     <h1>Đăng Nhập</h1>
                                     <input name="email" type="email" required placeholder="Email">
                                     <input name="pass" type="password" required placeholder="Password">
+                                    <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                     <span class="text-danger error-message">
                                         @ViewBag.ErrorEmail
                                         @ViewBag.ErrorPass
@@ -207,5 +210,12 @@
     </div>
     <script src="~/assets/js/scripts.js"></script>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript">
+        function redirectToSignIn(targetUrl) {
+            var url = "/Home/SignIn?returnUrl=" + encodeURIComponent(targetUrl);
+            console.log("Redirect URL:", url); // Kiểm tra URL
+            window.location.href = url;
+        }
+    </script>
 </body>
 </html>
