--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -96,7 +96,7 @@
                     <div class="modal" id="js-modal">
                         <div class="login-container" id="js-login-container">
                             <div class="form-container sign-up">
-                                <form method="post" action="/Home/SignUp">
+                                <form class="signup-form" method="post" action="/Home/SignUp">
                                     @Html.AntiForgeryToken()
                                     <h1>Tạo Tài Khoản</h1>
                                     <input name="name" type="text" required placeholder="Name">
@@ -109,12 +109,12 @@
                                         @ViewBag.ErrorEmailExist
                                         @ViewBag.ErrorPassNotsame
                                     </span>
-                                    <button type="submit" class="js-signup">Đăng Ký</button>
+                                    <button type="submit" class="js-signup" style="cursor: pointer" data-bs-toggle="modal" data-bs-target="#verifyCode">Đăng Ký</button>
                                 </form>
                             </div>
 
                             <div class="form-container sign-in">
-                                <form method="post" action="/Home/SignIn">
+                                <form class="signin-form" method="post" action="/Home/SignIn">
                                     @Html.AntiForgeryToken()
                                     <h1>Đăng Nhập</h1>
                                     <input name="email" type="email" required placeholder="Email">
@@ -124,7 +124,7 @@
                                         @ViewBag.ErrorEmail
                                         @ViewBag.ErrorPass
                                     </span>
-                                    <a href="#">Quên mật khẩu?</a>
+                                    <a style="cursor: pointer" data-bs-toggle="modal" data-bs-target="#forgetPass">Quên mật khẩu?</a>
                                     <button type="submit" class="js-signin">Đăng Nhập</button>
                                 </form>
                             </div>
@@ -139,6 +139,44 @@
                                         <h1>Chưa có tài khoản?</h1>
                                         <p>Đăng ký tài khoản với thông tin cá nhân của bạn</p>
                                         <button class="hidden" id="js-register">Đăng Ký</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                            <div @*style="display: flex; align-items: center"*@ class="modal fade" id="forgetPass" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" style="display: flex; justify-content: center">
+                                    <div class="modal-content" style="width: 400px; height: 450px">
+                                        <img src="~/assets/images/subimg/ohayoucinema.svg" class="rounded mx-auto d-block" alt="" style="margin-top: 2rem">
+                                        <p style="font-weight: 500; display: flex; margin-top: 1rem; justify-content: center;">Quên Mật Khẩu?</p>
+
+                                        <form class="forgetPass-form">
+                                            <span style="font-size: 13px">
+                                                Vui lòng cung cấp email đăng nhập, chúng tôi sẽ gửi mã cho bạn.
+                                            </span>
+                                            <label style="color: rgb(119 119 119 /1); font-weight: 600; font-size: 12px">Email</label>
+                                            <input name="registerEmail" type="email" required placeholder="Nhập email đã đăng ký" />
+                                            <span class="text-danger response-mess"></span>
+                                            <button type="submit">Cấp lại mật khẩu</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div @*style="display: flex; align-items: center"*@ class="modal fade" id="verifyCode" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" style="display: flex; justify-content: center">
+                                    <div class="modal-content" style="width: 400px; height: 450px">
+                                        <img src="~/assets/images/subimg/ohayoucinema.svg" class="rounded mx-auto d-block" alt="" style="margin-top: 2rem">
+                                        <p style="font-weight: 500; display: flex; margin-top: 1rem; justify-content: center;">Xác Thực Email</p>
+
+                                        <form class="verifyCode-form">
+                                            <span style="font-size: 13px; margin: 1rem 0;">
+                                                Vui lòng nhập mã xác thực chúng tôi đã gửi vào email của bạn đã đăng ký.
+                                            </span>
+                                            <label style="color: rgb(119 119 119 /1); font-weight: 600; font-size: 12px">Verify Code</label>
+                                            <input name="verifyCode" type="email" required placeholder="Nhập mã xác thực" />
+                                            <span class="text-danger response-mess"></span>
+                                            <button type="submit">Xác nhận</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -216,6 +254,96 @@
             console.log("Redirect URL:", url); // Kiểm tra URL
             window.location.href = url;
         }
+
+        $('.signup-form').submit(function (e) {
+            e.preventDefault();
+            var email = $('input[name="email"]').val();
+            var name = $('input[name="name"]').val();
+            var pass = $('input[name="pass"]').val();
+            var confirmpass = $('input[name="confirmpass"]').val();
+            var returnUrl = $('input[name="returnUrl"]').val();
+            $.ajax({
+                url: '/Home/CheckExistAccount',
+                type: 'POST',
+                data: { email: email, name: name, pass: pass, confirmpass: confirmpass, returnUrl: returnUrl },
+                success: function (data) {
+                    if (data.success) {
+                        SendVerifyCode(email)
+                    }
+                    else {
+                        $('.error-message').text(data.message)
+                    }
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        })
+
+        function SendVerifyCode(email) {
+            $.ajax({
+                url: '/Home/VerifyCode',
+                type: 'POST',
+                data: { email: email},
+                success: function (data) {
+           
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        }
+
+        $('.verifyCode-form').submit(function (e) {
+            e.preventDefault();
+            var verifyCode = $('input[name="verifyCode"]').val();
+            var name = $('.signup-form input[name="name"]').val();
+            var email = $('.signup-form input[name="email"]').val();
+            var pass = $('.signup-form input[name="pass"]').val();
+            var confirmpass = $('.signup-form input[name="confirmpass"]').val();
+            var dateofbirth = $('.signup-form input[name="dateofbirth"]').val();
+            var returnUrl = $('.signup-form input[name="returnUrl"]').val();
+            $.ajax({
+                url: '/Home/SignUp',
+                type: 'POST',
+                data: {
+                    name: name,
+                    email: email,
+                    dateofbirth: dateofbirth,
+                    pass: pass,
+                    confirmpass: confirmpass,
+                    returnUrl: returnUrl,
+                    verifyCode: verifyCode
+                },
+                success: function (data) {
+                    $('.response-mess').text(data.message)
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        })
+
+        $('.forgetPass-form').submit(function (e) {
+            e.preventDefault();
+            var registerEmail = $('input[name="registerEmail"]').val();
+            $.ajax({
+                url: '/Home/ForgetPassword',
+                type: 'POST',
+                data: { registerEmail: registerEmail },
+                success: function (data) {
+                    $('.response-mess').text(data.message)
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        })
+        $('.forgetPass-form input').click(() => {
+            console.log("Hello")
+            $('.response-mess').text("")
+        })
+
     </script>
 </body>
 </html>
