--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -339,7 +339,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
+    margin: 0 40px;
     height: 100%;
 }
 
