--- a/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -92,7 +92,13 @@
                         <div class="col-auto">
                             <div class="show-login js-show-login">
                                 <div class="account-wrapper">
-                                    <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
+                                    <div class="position-relative">
+                                        <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
+                                        <span style="font-size: 10px; top: 10px !important; left: 54px !important;" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                            1
+                                            <span class="visually-hidden">unread messages</span>
+                                        </span>
+                                    </div>
                                     <ul class="list-group account-list">
                                         <li class="list-group-item">
                                             <a href="/User/UserHome/UserProfile">
